# proof-surface

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
conformance/authorization-receipt/v0.1/: manifest.json
conformance/claim-ledger/v0.1/: manifest.json
conformance/delegation-chain/v0.1/: manifest.json
conformance/evaluation-contract/v0.1/: manifest.json
conformance/pre-execution-gate/v0.1/: manifest.json
conformance/proof-surface/v0.1/: manifest.json
conformance/witness-receipt/v0.1/: manifest.json
conformance/work-record/v0.1/: manifest.json
docs/brand/: README.md
examples/: demo.py
examples/agent_action/: authorization.json  otel-export.json  trace_denied.json  trace_side_effecting.json
examples/agent_action/demo-denied-out/: crucible-measurements.json  crucible-thesis.json  packet.json  report.md
examples/agent_action/demo-otel-out/: bundle.json  crucible-measurements.json  crucible-thesis.json  packet.json  report.md
examples/agent_action/demo-out/: crucible-measurements.json  crucible-thesis.json  packet.json  report.md
examples/model_eval/: eval.json
examples/model_eval/demo-out/: crucible-measurements.json  crucible-thesis.json  packet.json  report.md
examples/research_claim/: collatz.json  triangular.json
examples/research_claim/demo-out/: crucible-measurements.json  crucible-thesis.json  packet.json  report.md
examples/visual_measurement/: measurement.json
examples/visual_measurement/demo-out/: packet.json  (+3 more)
project-docs/specs/: SPEC-proof-surface-forward-delivery.md
schemas/: authorization-receipt.schema.json  claim-ledger.schema.json  delegation-chain.schema.json  evaluation-contract.schema.json  gate-request.schema.json  organ-receipt-bundle.schema.json  proof-surface-packet.schema.json  witness-receipt.schema.json  work-record-receipt.schema.json
src/proof_surface/: __init__.py  __main__.py  _boundary.py  _bundle.py  _compute_lease.py  _crucible_peer.py  _decision.py  _failure.py  _validate.py  _verdict.py  authorization_receipt.py  claim_ledger.py  cli.py  delegation_chain.py  evaluation_contract.py  human_gap.py  organ_receipt_bundle.py  packet.py  pre_execution_gate.py  witness_receipt.py  work_record.py
tests/: test_agent_action_builder.py  test_agent_action_cli.py  test_agent_action_cli_trace_format.py  test_agent_action_compute_lease.py  test_agent_action_evidence_refs.py  test_agent_action_failure_labels.py  test_agent_action_identity.py  test_agent_action_importer.py  test_agent_action_ledger.py  test_agent_action_packet.py  test_agent_action_redaction.py  test_agent_action_report.py  test_agent_action_verdicts.py  test_ai4science_builder.py  test_ai4science_cli.py  test_authorization_receipt.py  test_boundary.py  test_bundle.py  test_claim_ledger.py  test_cli_dispatch.py  test_conformance_negatives.py  test_conformance_negatives_family.py  test_conservation_boundary_fixture.py  test_conservation_builder.py  test_conservation_cli.py  test_crucible_peer.py  test_decision.py  test_decision_wiring.py  test_delegation_chain.py  test_eval_attempt_auditability.py  test_eval_attempt_builder.py  test_eval_attempt_cli.py  test_evaluation_contract.py  test_family_failure_labels.py  test_forward_delivery_contract.py  test_human_gap_gate.py  test_model_eval_builder.py  test_model_eval_packet.py  test_model_eval_report_cli.py  test_optimization_workflow_branch_encoding.py  (+28 more)
(+133 files in other folders)
