[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "proof-surface"
version = "0.1.0"
description = "Shared accountability/provenance contract family: packet, work-record + authorization receipts, witness receipt, pre-execution gate, evaluation contract, claim ledger, and delegation chain validators"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["json", "proof", "provenance", "receipt", "accountability", "schema"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "jsonschema>=4.18"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
