[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "proof-surface"
version = "0.1.0"
description = "The stdlib-only accountability contract: evidence packets, work-record receipts, and witness validators that reject authority-shaped content."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["json", "proof", "provenance", "receipt", "accountability", "schema"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HarperZ9/proof-surface"
Repository = "https://github.com/HarperZ9/proof-surface"
Issues = "https://github.com/HarperZ9/proof-surface/issues"

[project.optional-dependencies]
test = ["pytest>=8", "jsonschema>=4.18"]

[project.scripts]
proof-surface-agent-action = "proof_surface.agent_action.cli:main"
proof-surface-visual-measurement = "proof_surface.visual_measurement.cli:main"
proof-surface-research-claim = "proof_surface.research_claim.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
